# chihuahua

./: .gitignore  FLOW.md  LICENSE.md  README.md  main.py  pyproject.toml
apps/: health_check.py
src/: manage.py
src/chihuahua/: __init__.py  asgi.py  main.py  settings.py  urls.py  wsgi.py
src/chihuahua/apps/: README.md
